# tcio

./: CHANGELOG.md  Cargo.toml  README.md
docs/: README.md  bytes.md  event-model.md  parsing.md
docs/experimental/: alternative-bytes-representation.md
example/: Cargo.toml  io_task.rs  main.rs
src/: atoi.rs  bytes.rs  bytestr.rs  either.rs  either_map.rs  fmt.rs  futures.rs  io.rs  lib.rs  macros.rs  main.rs  slice.rs  tokio.rs
src/bytes/: buf.rs  buf_mut.rs  bytes.rs  bytes_ext.rs  bytes_mut.rs  bytestr.rs  chain.rs  cursor.rs  cursor_buf.rs  mod.rs  range.rs  shared.rs  take.rs  uninit_slice.rs
src/bytes/test/: mod.rs  test_bytes.rs  test_bytes_mut.rs  test_cursor.rs  test_cursor_buf.rs
src/either/: either.rs  either_map.rs  mod.rs
src/futures/: map.rs  mod.rs  then.rs
src/io/: bufread.rs  cursor.rs  io_read.rs  io_write.rs  mod.rs  read.rs  write.rs
src/io_task/: handle.rs  mod.rs  poll.rs  task.rs
src/num/: mod.rs  num.rs
src/sync/: mod.rs  recall.rs
src/tokio/: mod.rs  poll.rs  stream.rs
