[package]
name = "example"
version = "0.1.0"
edition = "2024"

[dependencies]
bytes = "1.10.1"
tcio = { version = "0.1.3", path = "..", features = ["tokio"] }
tokio = { version = "1.45.1", features = ["net", "rt-multi-thread"] }

[[bin]]
name = "example"
path = "main.rs"

[[example]]
name = "io_task"
path = "io_task.rs"
